--- a/package.json
+++ b/package.json
@@ -3,18 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^1.8.8",
     "@mui/material": "file:emotion/react@emotion/styled",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.24",
+    "@types/react": "^18.0.5",
+    "@types/react-dom": "^18.0.1",
     "axios": "^0.26.1",
     "link": "^0.1.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.8",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "^5.3.1",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
     "source-map-resolve": "^0.6.0",
@@ -45,6 +50,7 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.13.0"
+    "eslint": "^8.13.0",
+    "typescript": "^4.6.3"
   }
 }
